# Panen-Protocol

./: LICENSE  README.md
ai/: Model_Training.py  README.md  ecosystem.config.example.json  model_info.json  model_server.py  relay_server.py  requirements.txt
back-end/: README.md  env.example  package.json
back-end/src/: db.js  index.js  migrate.js  routes.js  validators.js
front-end/: README.md  env.example  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
front-end/src/: App.tsx  index.css  main.tsx  vite.env.d.ts
front-end/src/components/: FlowTimeline.tsx  IdlStatus.tsx  KoperasiPanel.tsx  MillPanel.tsx  TxButton.tsx  VerifikasiResult.tsx
front-end/src/config/: constants.ts
front-end/src/contexts/: LangContext.tsx  ProgramContext.tsx  WalletContext.tsx
front-end/src/hooks/: useAdvanceFlow.ts  useAgreementFlow.ts  useChainStats.ts  useKyc.ts  useMillFlow.ts  useMillResumeFlow.ts  usePdas.ts  usePoolInfo.ts  useReceiptFlow.ts  useResumeFlow.ts  useVerifikasi.ts
front-end/src/i18n/: strings.ts
front-end/src/utils/: hash.ts  idr.ts
oracle/: README.md  env.example  package.json
oracle/src/: db.js  fetcher.js  index.js  logger.js  oracle.js  pusher.js
program/: Anchor.toml  Cargo.toml  README.md  env.example  package.json  tsconfig.json
program/programs/panen-program/: Cargo.toml
program/programs/panen-program/src/: lib.rs
program/scripts/: config.ts  deposit.ts  initialize.ts  update-rate.ts
