[package]
name = "panen"
version = "0.1.0"
description = "Panen Protocol - On-chain agricultural receivables finance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "panen"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token"] }